[package]
name = "r_ssz"
version = "0.1.2"
authors = [
    "Soubhik Singha Mahapatra <soubhiksinghamahapatra@gmail.com>, Ishika Choudhury <ishikac720@gmail.com>",
]
edition = "2024"
description = "SSZ Serialization and Merkleization for Ethereum consensus types."
repository = "https://github.com/Soubhik-10/r_ssz"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["ethereum", "ssz", "serialization", "merkle"]
categories = ["cryptography", "data-structures"]

[dependencies]
alloy-primitives = { version = "1.2.0", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
